--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -58,12 +58,7 @@ jobs:
         run: terraform fmt -check
 
       - name: 'Terraform Init'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 0.12.13
-          tf_actions_subcommand: 'init'
-          tf_actions_working_dir: '.'
-          tf_actions_comment: true
+        run: terraform init
 
      - name: Terraform Validate
        id: validate
