New tf file and cd script

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -44,12 +44,14 @@ jobs:
       - name: Build artifact
         run: packer build packer.pkr.hcl
 
+      - name: Get ami ID
+        uses: sergeysova/jq-action@v2
+        id: ami_id
+        with:
+          cmd: 'cat manifest.json | jq -r .builds[0].artifact_id |  cut -d':' -f2'
 
       - name: Setup AMI ID as terraform variable
-        run: |
-          echo "ami_id=$(manifest.json | jq -r '.builds[-1].artifact_id' |  cut -d':' -f2)" >> $GITHUB_ENV
-          echo ${{ env.ami_id }}
-          export TF_VAR_ami_id=${{ env.ami_id }}
+        run: echo "AMI_ID=$(echo ${{steps.ami_id.outputs.value }})" >> GITHUB_ENV
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
@@ -64,5 +66,13 @@ jobs:
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
+
+      - name: Terraform plan
+        id: plan
+        run: terraform plan -no-color
+
+      - name: Terraform apply
+        id: apply
+        run: terraform apply -var="ami_id=${{ env.AMI_ID }}" -var="deployer-key=${{ secrets.deployer-key }}"
 
       # TODO: SSH into instance and build app with IP and run
