--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 
 # macos
 .DS_Store
+.terraform.lock.hcl
+.terraform/providers/registry.terraform.io/hashicorp/aws/3.57.0/darwin_amd64/terraform-provider-aws_v3.57.0_x5
+terraform.tfstate
+manifest.json
