--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,21 +1,22 @@
-// declarative pipeline simplified syntax for defining the pipeline
-// contains all definitions of jenkins pipeline
-
-pipeline{
-    //Directives
-    agent any
-
+pipeline {
+    agent {
+        docker {
+            image 'node:6-alpine'
+            args '-p 3000:3000'
+        }
+    }
+    environment {
+        CI = 'true'
+    }
+    
+    // stage 1. Build
     stages {
-        // Specify various stage with in stages
-
-        // stage 1. Build
-        stage ('Build'){
+        stage('Build') {
             steps {
-                echo ' building......'
+                sh 'npm install'
             }
         }
-
-        // Stage2 : Testing
+          // Stage2 : Testing
         stage ('Test'){
             steps {
                 echo ' testing......'
@@ -23,13 +24,11 @@ pipeline{
             }
         }
 
-        // Stage3 : Publish the artifacts to Nexus
+       // Stage3 : Publish the artifacts to Nexus
         stage ('Deploy'){
             steps {
                 echo ' deploying......'
             }
         }
-
     }
-
 }
