still figuring out how is the pipeline syntax for node js

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,34 +1,22 @@
 pipeline {
-    agent {
-        docker {
-            image 'node:6-alpine'
-            args '-p 3000:3000'
-        }
-    }
-    environment {
-        CI = 'true'
-    }
+  agent any
     
-    // stage 1. Build
-    stages {
-        stage('Build') {
-            steps {
-                sh 'npm install'
-            }
-        }
-          // Stage2 : Testing
-        stage ('Test'){
-            steps {
-                echo ' testing......'
-
-            }
-        }
-
-       // Stage3 : Publish the artifacts to Nexus
-        stage ('Deploy'){
-            steps {
-                echo ' deploying......'
-            }
-        }
+  tools {nodejs "node"}
+    
+  stages {
+        
+    stage('Build') {
+      steps {
+        sh 'npm install'
+         sh '<<Build Command>>'
+      }
+    }  
+    
+            
+    stage('Test') {
+      steps {
+        sh 'node test'
+      }
     }
+  }
 }
