--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -21,7 +21,14 @@ pipeline {
             }
         }
 
-       // Stage3 : Publish the artifacts to Nexus
+        // Stage3: Publishing artifacts to nexus
+        stage ('Test'){
+            steps {
+                nexusArtifactUploader artifacts: [[artifactId: 'tanjapolz', classifier: '', file: 'target/com.devopsproject-0.0.5-SNAPSHOT.war', type: 'war']], credentialsId: '38cc8635-b552-4aad-b98f-0e36d6a1eab5', groupId: 'com.devopsproject', nexusUrl: '172.20.10.170:8081', nexusVersion: 'nexus3', protocol: 'http', repository: 'devops-client-SNAPSHOT', version: '0.0.5-SNAPSHOT'
+            }
+        }
+
+       // Stage4: Publish the artifacts to Nexus
         stage ('Deploy'){
             steps {
                 echo ' deploying......'
@@ -29,3 +36,4 @@ pipeline {
         }
     }
 }
+
