--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
         }
 
         // Stage3: Publishing artifacts to nexus
-        stage ('Test'){
+        stage ('Publishing'){
             steps {
                 nexusArtifactUploader artifacts: [[artifactId: 'tanjapolz', classifier: '', file: 'target/com.devopsproject-0.0.5-SNAPSHOT.war', type: 'war']], credentialsId: '38cc8635-b552-4aad-b98f-0e36d6a1eab5', groupId: 'com.devopsproject', nexusUrl: '172.20.10.170:8081', nexusVersion: 'nexus3', protocol: 'http', repository: 'devops-client-SNAPSHOT', version: '0.0.5-SNAPSHOT'
             }
