--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -21,14 +21,17 @@ pipeline {
             }
         }
 
-        // Stage3: Publishing artifacts to nexus
-        stage ('Publishing'){
-             steps {
-                dir('/var/lib/jenkins/workspace/client/app/client/') {
-                    sh "npm publish"
+        /// stage 1. Build
+        stages {
+            stage('Build') {
+                steps {
+                    dir('/var/lib/jenkins/workspace/client/app/client/') {
+                        sh "npm publish"
+                    }
                 }
             }
-        
+
+  
 
        // Stage4: Publish the artifacts to Nexus
         stage ('Deploy'){
