--- a/app/client/.npmrc
+++ b/app/client/.npmrc
@@ -1,3 +1,3 @@
-registry=http://your-host:8081/repository/npm-private/
+registry=http://18.185.136.129:8081/repository/npm-private/
 _auth=YWRtaW46YWRtaW4xMjM=
 always-auth=true
