try to solve auth problems to nexus

--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -25,6 +25,8 @@ pipeline {
         stage ('Publishing'){
                steps {
                 dir('/var/lib/jenkins/workspace/client/app/client/') {
+                    sh 'npm whoami'
+                    sh 'rm .npmrc'
                     sh "npm publish"
                 }
             }
