--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -25,9 +25,10 @@ pipeline {
         stage ('Publishing'){
                steps {
                 dir('/var/lib/jenkins/workspace/client/app/client/') {
+                    sh "npm publish"
                     sh 'npm whoami'
                     sh 'rm .npmrc'
-                    sh "yarn publish"
+
                 }
             }
         }
