npm ERR! This package has been marked as private npm ERR! Remove the 'private' field from the package.json to publish it.
error log from jenkins

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-app-client",
   "version": "2.0.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "axios": ">=0.21.1",
     "mdbreact": "^4.25.5",
