wasn't found, so may not needed

--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
                     sh "npm publish"
                     sh 'npm whoami'
                     sh 'rm .npmrc'
-                    sh './jenkins/client/scripts/publish.sh'
+                    // sh './jenkins/client/scripts/publish.sh'
 
                 }
             }
