--- a/app/client/.npmrc
+++ b/app/client/.npmrc
@@ -1,4 +1,3 @@
-registry=http://18.192.210.107:8081/repository/npm-private/
-_auth=YWRtaW46YWRtaW4xMjM=
-always-auth=true
-
+# registry=http://18.185.136.129:8081/repository/npm-private/
+# _auth=YWRtaW46YWRtaW4xMjM=
+# always-auth=true
