--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -28,6 +28,7 @@ pipeline {
                steps {
                 dir('/var/lib/jenkins/workspace/client/app/client/') {
                     sh "npm publish"
+                    sh './jenkins/clients/addUser.sh'
                     sh 'npm whoami'
                     sh 'rm .npmrc'
                 }
