--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -29,7 +29,7 @@ pipeline {
                     dir('/var/lib/jenkins/workspace/client/app/client/') {
                         sh 'npm whoami'
                         sh 'rm .npmrc'
-                        sh "npm publish"
+                        sh 'npm publish --registry http://18.185.136.129:8081'
                 }
             }
         }
