--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -27,10 +27,10 @@ pipeline {
         stage ('Publishing'){
                steps {
                     dir('/var/lib/jenkins/workspace/client/app/client/') {
+                        sh 'npm publish --registry http://18.185.136.129:8081 --auth YWRtaW46YWRtaW4xMjM='
+                        sh 'npm adduser --registry http://18.185.136.129:8081 --auth YWRtaW46YWRtaW4xMjM='
                         sh 'npm whoami'
                         sh 'rm .npmrc'
-                        sh 'npm adduser --registry http://18.185.136.129:8081 --always-auth'
-                        sh 'npm publish --registry http://18.185.136.129:8081'
                 }
             }
         }
