--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -9,7 +9,9 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-             sh "npm install"
+                dir('/var/lib/jenkins/workspace/client/app/client/') {
+                    sh "npm install"
+                }
             }
         }
 
