--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -28,8 +28,11 @@ pipeline {
                steps {
                     dir('/var/lib/jenkins/workspace/client/app/client/') {
                         sh 'npm publish'
-                        sh 'npm whoami'
-                        sh 'rm .npmrc'
+                        dir('/var/lib/jenkins/workspace/client/app/client/helper/') { 
+                            sh 'npm whoami'
+                            sh 'rm .npmrc'
+                        }
+                       
                     }
             }
         }
