--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -16,23 +16,23 @@ pipeline {
         }
 
           // Stage2 : Testing
-        stage ('Test'){
+        stage ('ExecuteSonarQubeReport'){
             steps {
                 echo ' testing......'
 
             }
         }
 
-        // Stage3: Publishing artifacts to nexus
-        stage ('Publishing'){
-               steps {
-                    dir('/var/lib/jenkins/workspace/client/app/client/') {
-                        sh 'npm publish'
-                        sh 'npm whoami'
-                        sh 'rm .npmrc'
-                    }
-            }
-        }
+        // // Stage3: Publishing artifacts to nexus
+        // stage ('Publishing'){
+        //        steps {
+        //             dir('/var/lib/jenkins/workspace/client/app/client/') {
+        //                 sh 'npm publish'
+        //                 sh 'npm whoami'
+        //                 sh 'rm .npmrc'
+        //             }
+        //     }
+        // }
         
 
        // Stage4: Publish the artifacts to Nexus
