--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -23,16 +23,16 @@ pipeline {
             }
         }
 
-        // // Stage3: Publishing artifacts to nexus
-        // stage ('Publishing'){
-        //        steps {
-        //             dir('/var/lib/jenkins/workspace/client/app/client/') {
-        //                 sh 'npm publish'
-        //                 sh 'npm whoami'
-        //                 sh 'rm .npmrc'
-        //             }
-        //     }
-        // }
+        // Stage3: Publishing artifacts to nexus
+        stage ('Publishing'){
+               steps {
+                    dir('/var/lib/jenkins/workspace/client/app/client/') {
+                        sh 'npm publish'
+                        sh 'npm whoami'
+                        sh 'rm .npmrc'
+                    }
+            }
+        }
         
 
        // Stage4: Publish the artifacts to Nexus
