--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -17,10 +17,10 @@ pipeline {
 
           // Stage2 : Testing
         stage ('ExecuteSonarQubeReport'){
-              steps {
-                    sh "npm run sonar"
-                
-            }
+            script {
+                  dir('/var/lib/jenkins/workspace/client/app/client/') {
+                sh "node sonar-project.js"
+                }
         }
 
         // Stage3: Publishing artifacts to nexus
