--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -17,9 +17,9 @@ pipeline {
 
           // Stage2 : Testing
         stage ('ExecuteSonarQubeReport'){
-              script {
+              steps {
                 dir('/var/lib/jenkins/workspace/client/app/client/') {
-                    sh "node project-sonar.js"
+                    sh "npm run sonar-project"
                 }
             }
         }
