--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -17,10 +17,10 @@ pipeline {
 
           // Stage2 : Testing
         stage ('ExecuteSonarQubeReport'){
-     
+              steps {
                 dir('/var/lib/jenkins/workspace/client/app/client/') {
-                    sh "npm run sonar-project"
-
+                    sh "node sonar-project"
+                }
             }
         }
 
