--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -19,7 +19,10 @@ pipeline {
         stage ('ExecuteSonarQubeReport'){
               steps {
                 dir('/var/lib/jenkins/workspace/client/app/client/') {
+                    sh "npm install -D sonarqube-scanner"
                     sh "node sonar-project"
+                 
+
                 }
             }
         }
