--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -10,6 +10,7 @@ pipeline {
         stage('Build') {
             steps {
                 dir('/var/lib/jenkins/workspace/client/app/client/') {
+                    sh "npm i sonar-scanner --save-dev"
                     sh "npm install"
                 }
             }
