--- a/app/client/.npmrc
+++ b/app/client/.npmrc
@@ -1,3 +1,3 @@
-registry=http://3.65.199.82:8081/repository/npm-private/
-_auth=YWRtaW46YWRtaW4xMjM=
-always-auth=true
+# registry=http://3.65.199.82:8081/repository/npm-private/
+# _auth=YWRtaW46YWRtaW4xMjM=
+# always-auth=true
