--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -15,27 +15,27 @@ pipeline {
             }
         }
 
-          // Stage2 : Testing
-        stage ('ExecuteSonarQubeReport'){
-              steps {
-                dir('/var/lib/jenkins/workspace/client/app/client/') {
-                    sh "node sonar-project"
+        //   // Stage2 : Testing
+        // stage ('ExecuteSonarQubeReport'){
+        //       steps {
+        //         dir('/var/lib/jenkins/workspace/client/app/client/') {
+        //             sh "node sonar-project"
                  
 
-                }
-            }
-        }
+        //         }
+        //     }
+        // }
 
-        // Stage3: Publishing artifacts to nexus
-        stage ('Publishing'){
-               steps {
-                    dir('/var/lib/jenkins/workspace/client/app/client/') {
-                        sh 'npm publish'
-                        sh 'npm whoami'
-                        sh 'rm .npmrc'
-                    }
-            }
-        }
+        // // Stage3: Publishing artifacts to nexus
+        // stage ('Publishing'){
+        //        steps {
+        //             dir('/var/lib/jenkins/workspace/client/app/client/') {
+        //                 sh 'npm publish'
+        //                 sh 'npm whoami'
+        //                 sh 'rm .npmrc'
+        //             }
+        //     }
+        // }
         
 
        // Stage4: Publish the artifacts to Nexus
