--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -15,16 +15,16 @@ pipeline {
             }
         }
 
-          // Stage2 : Testing
-        stage ('ExecuteSonarQubeReport'){
-              steps {
-                dir('/var/lib/jenkins/workspace/client/app/client/') {
-                    sh "node sonar-project"
+        //   // Stage2 : Testing
+        // stage ('ExecuteSonarQubeReport'){
+        //       steps {
+        //         dir('/var/lib/jenkins/workspace/client/app/client/') {
+        //             sh "node sonar-project"
                  
 
-                }
-            }
-        }
+        //         }
+        //     }
+        // }
 
         // // Stage3: Publishing artifacts to nexus
         // stage ('Publishing'){
