--- a/app/client/.npmrc
+++ b/app/client/.npmrc
@@ -1,3 +1,3 @@
-# registry=http://18.157.186.138:8081/repository/npm-private/
-# _auth=YWRtaW46YWRtaW4xMjM=
-# always-auth=true
+registry=http://54.93.247.25:8081/repository/npm-private/
+_auth=YWRtaW46YWRtaW4xMjM=
+always-auth=true
