--- a/app/server/.npmrc
+++ b/app/server/.npmrc
@@ -1,2 +1,2 @@
-registry=http://18.193.8.242:8081/repository/npm-private/
-_auth=YWRtaW46YWRtaW4xMjM=
+# registry=http://35.156.19.210:8081/repository/npm-private/
+# _auth=YWRtaW46YWRtaW4xMjM=
