--- a/app/client/.npmrc
+++ b/app/client/.npmrc
@@ -1,3 +1,2 @@
-registry=http://54.93.247.25:8081/repository/npm-private/
-_auth=YWRtaW46YWRtaW4xMjM=
-always-auth=true
+# registry=http://35.156.19.210:8081/repository/npm-private/
+# _auth=YWRtaW46YWRtaW4xMjM=
