--- a/jenkins/server/Jenkinsfile
+++ b/jenkins/server/Jenkinsfile
@@ -1,13 +1,15 @@
 pipeline {
   agent any
     
-  tools {nodejs "node"}
-    
+  tools {
+      nodejs "node"
+    }
+        
     // stage 1. Build
     stages {
         stage('Build') {
             steps {
-                dir('/var/lib/jenkins/workspace/server/app/server/') {
+                dir('/var/lib/jenkins/workspace/client/app/client/') {
                     sh "npm install"
                 }
             }
@@ -15,13 +17,39 @@ pipeline {
 
           // Stage2 : Testing
         stage ('Test'){
-            steps {
-                echo ' testing......'
+              steps {
+                dir('/var/lib/jenkins/workspace/client/app/client/') {
+                    sh "npm test"
+                 
 
+                }
             }
         }
 
-       // Stage3 : Publish the artifacts to Nexus
+              //   // Stage2 : Testing
+        // stage ('ExecuteSonarQubeReport'){
+        //       steps {
+        //         dir('/var/lib/jenkins/workspace/client/app/client/') {
+        //             sh "node sonar-project"
+                 
+
+        //         }
+        //     }
+        // }
+
+        // Stage3: Publishing artifacts to nexus
+        // stage ('Publishing'){
+        //        steps {
+        //             dir('/var/lib/jenkins/workspace/client/app/client/') {
+        //                 sh 'npm publish'
+        //                 sh 'npm whoami'
+        //                 sh 'rm .npmrc'
+        //             }
+        //     }
+        // }
+        
+
+       // Stage4: Publish the artifacts to Nexus
         stage ('Deploy'){
             steps {
                 echo ' deploying......'
@@ -29,3 +57,4 @@ pipeline {
         }
     }
 }
+
