--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -15,16 +15,16 @@ pipeline {
             }
         }
 
-          // Stage2 : Testing
-        stage ('Test'){
-              steps {
-                dir('/var/lib/jenkins/workspace/client/app/client/') {
-                    sh "npm test"
+        //   // Stage2 : Testing
+        // stage ('Test'){
+        //       steps {
+        //         dir('/var/lib/jenkins/workspace/client/app/client/') {
+        //             sh "npm test"
                  
 
-                }
-            }
-        }
+        //         }
+        //     }
+        // }
 
               //   // Stage2 : Testing
         // stage ('ExecuteSonarQubeReport'){
