--- a/app/client/.npmrc
+++ b/app/client/.npmrc
@@ -1,2 +1,3 @@
-# registry=http://35.156.19.210:8081/repository/npm-private/
-# _auth=YWRtaW46YWRtaW4xMjM=
+registry=http://3.64.12.23:8081/repository/npm-private/
+_auth=YWRtaW46YWRtaW4xMjM=
+always-auth=true
