--- a/jenkins/client/Jenkinsfile
+++ b/jenkins/client/Jenkinsfile
@@ -15,15 +15,15 @@ pipeline {
             }
         }
 
-        //   // Stage2 : Testing
-        // stage ('Test'){
-        //       steps {
-        //         dir('/var/lib/jenkins/workspace/client/app/client/') {
-        //             sh "npm test"
+          // Stage2 : Testing
+        stage ('Test'){
+              steps {
+                dir('/var/lib/jenkins/workspace/client/app/client/') {
+                    sh "npm test"
                  
 
-        //         }
-        //     }
+                }
+            }
         // }
 
               //   // Stage2 : Testing
@@ -37,16 +37,16 @@ pipeline {
         //     }
         // }
 
-        // Stage3: Publishing artifacts to nexus
-        // stage ('Publishing'){
-        //        steps {
-        //             dir('/var/lib/jenkins/workspace/client/app/client/') {
-        //                 sh 'npm publish'
-        //                 sh 'npm whoami'
-        //                 sh 'rm .npmrc'
-        //             }
-        //     }
-        // }
+        Stage3: Publishing artifacts to nexus
+        stage ('Publishing'){
+               steps {
+                    dir('/var/lib/jenkins/workspace/client/app/client/') {
+                        sh 'npm publish'
+                        sh 'npm whoami'
+                        sh 'rm .npmrc'
+                    }
+            }
+        }
         
 
        // Stage4: Publish the artifacts to Nexus
