--- a/app/client/package.json
+++ b/app/client/package.json
@@ -87,8 +87,8 @@
     ]
   },
   "engines": {
-    "node": ">=12.16.0",
-    "npm": ">=6.14.0"
+    "node": "^14.15.5",
+    "npm": "^7.24.0"
   },
   "jest": {
     "roots": [
