--- a/app/server/package.json
+++ b/app/server/package.json
@@ -25,7 +25,7 @@
     "validator": "^13.0.0"
   },
   "engines": {
-    "node": ">=12.16.0",
-    "npm": ">=6.14.0"
+    "node": "^14.15.5",
+    "npm": "^7.24.0"
   }
 }
