--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -19,13 +19,13 @@ on:
       - main
 
 env:
-  PROJECT_ID: ${{ secrets.GKE_PROJECT }} # western-mix-343614
-  GAR_LOCATION: us-central1 # TODO: update region of the Artifact Registry
-  GKE_CLUSTER: zalenium    # TODO: update to cluster name
-  GKE_ZONE: us-central1-c   # TODO: update to cluster zone
-  NAMESPACE_NAME: todo # TODO: update to namespace name
-  DEPLOYMENT_NAME: todo # TODO: update to deployment name
-  REPOSITORY: todo # TODO: update to Artifact Registry docker repository
+  PROJECT_ID: ${{ secrets.GKE_PROJECT }} 
+  GAR_LOCATION: us-central1 
+  GKE_CLUSTER: zalenium 
+  GKE_ZONE: us-central1-c   
+  NAMESPACE_NAME: prod
+  DEPLOYMENT_NAME: prod 
+  REPOSITORY: prod
   IMAGE: app
 
 jobs:
