--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -69,7 +69,7 @@ jobs:
         location: ${{ env.GKE_ZONE }}
 
     # Build and Test the Docker image
-    - name: Build
+    - name: Build and Test
       run: |-
         docker build \
           --tag "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA" \
@@ -90,7 +90,7 @@ jobs:
       run: |-
         # replacing the image name in the k8s template
         #./kustomize edit set image LOCATION-docker.pkg.dev/PROJECT_ID/REPOSITORY/IMAGE:TAG=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA
-        ./kustomize edit set image us-central1-docker.pkg.dev/western-mix-343614/todo/app:b99c1f8574b2b6278261def9c039458fc6317b6e=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA
+        ./kustomize edit set image us-central1-docker.pkg.dev/western-mix-343614/prod/app:b99c1f8574b2b6278261def9c039458fc6317b6e=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA
         ./kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/$DEPLOYMENT_NAME -n $NAMESPACE_NAME
         kubectl get services -o wide
