--- a/deployment.yml
+++ b/deployment.yml
@@ -83,15 +83,15 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: todo
-  namespace: todo
+  name: prod
+  namespace: prod
   labels:
-    app: todo
+    app: prod
     tier: frontend
     version: v1
 spec:
   selector:
-    app: todo
+    app: prod
     tier: frontend
     version: v1
   ports:
