--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -19,18 +19,18 @@ on:
       - main
 
 env:
-  PROJECT_ID: ${{ secrets.GKE_PROJECT }} 
-  GAR_LOCATION: us-central1 
-  GKE_CLUSTER: zalenium 
-  GKE_ZONE: us-central1-c   
-  NAMESPACE_NAME: prod
-  DEPLOYMENT_NAME: prod 
-  REPOSITORY: prod
+  PROJECT_ID: ${{ secrets.GKE_PROJECT }} # western-mix-343614
+  GAR_LOCATION: us-central1 # TODO: update region of the Artifact Registry
+  GKE_CLUSTER: zalenium    # TODO: update to cluster name
+  GKE_ZONE: us-central1-c   # TODO: update to cluster zone
+  NAMESPACE_NAME: todo # TODO: update to namespace name
+  DEPLOYMENT_NAME: todo # TODO: update to deployment name
+  REPOSITORY: todo # TODO: update to Artifact Registry docker repository
   IMAGE: app
 
 jobs:
   setup-build-publish-deploy:
-    name: Setup, Build, Test, Publish, and Deploy
+    name: Setup, Build, Publish, and Deploy
     runs-on: ubuntu-latest
     environment: production
 
@@ -68,8 +68,8 @@ jobs:
         cluster_name: ${{ env.GKE_CLUSTER }}
         location: ${{ env.GKE_ZONE }}
 
-    # Build and Test the Docker image
-    - name: Build and Test
+    # Build the Docker image
+    - name: Build
       run: |-
         docker build \
           --tag "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA" \
@@ -90,7 +90,7 @@ jobs:
       run: |-
         # replacing the image name in the k8s template
         #./kustomize edit set image LOCATION-docker.pkg.dev/PROJECT_ID/REPOSITORY/IMAGE:TAG=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA
-        ./kustomize edit set image us-central1-docker.pkg.dev/western-mix-343614/prod/app:b99c1f8574b2b6278261def9c039458fc6317b6e=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA
+        ./kustomize edit set image us-central1-docker.pkg.dev/western-mix-343614/todo/app:b99c1f8574b2b6278261def9c039458fc6317b6e=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA
         ./kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/$DEPLOYMENT_NAME -n $NAMESPACE_NAME
         kubectl get services -o wide
