--- a/deployment.yml
+++ b/deployment.yml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: prod
-  namespace: prod
+  name: todo
+  namespace: todo
   labels:
-    app: prod
+    app: todo
     tier: frontend
     version: v1
 data:
@@ -19,10 +19,10 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: prod
-  namespace: prod
+  name: todo
+  namespace: todo
   labels:
-    app: prod
+    app: todo
     tier: frontend
     version: v1
 data:
@@ -33,49 +33,49 @@ data:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: prod
-  namespace: prod
+  name: todo
+  namespace: todo
 spec:
   selector:
     matchLabels:
-      app: prod
+      app: todo
       tier: frontend
       version: v1
   replicas: 1
   template:
     metadata:
       labels:
-        app: prod
+        app: todo
         tier: frontend
-        name: prod
+        name: todo
         version: v1
     spec:
       containers:
-        - name: prod
-          image: 'us-central1-docker.pkg.dev/western-mix-343614/prod/app:b99c1f8574b2b6278261def9c039458fc6317b6e'
+        - name: todo
+          image: 'us-central1-docker.pkg.dev/western-mix-343614/todo/app:b99c1f8574b2b6278261def9c039458fc6317b6e'
           ports:
             - containerPort: 3000
           imagePullPolicy: Always
           envFrom:
           - secretRef:
-              name: prod
+              name: todo
 
           env:
             - name: CLIENT
               valueFrom:
                 configMapKeyRef:
-                  name: prod
+                  name: todo
                   key: client.url
             - name: MONGODB_URL
               valueFrom:
                 configMapKeyRef:
-                  name: prod
+                  name: todo
                   key: mongo.db.url
             - name: PORT
               valueFrom:
                 configMapKeyRef:
-                  name: prod
-                  key: port
+                  name: todo
+                  key: todo
                   
           
 ---
@@ -83,15 +83,15 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: prod
-  namespace: prod
+  name: todo
+  namespace: todo
   labels:
-    app: prod
+    app: todo
     tier: frontend
     version: v1
 spec:
   selector:
-    app: prod
+    app: todo
     tier: frontend
     version: v1
   ports:
