--- a/deployment.yml
+++ b/deployment.yml
@@ -75,7 +75,7 @@ spec:
               valueFrom:
                 configMapKeyRef:
                   name: todo
-                  key: todo
+                  key: port
                   
           
 ---
