--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -21,12 +21,12 @@ on:
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }} # western-mix-343614
   GAR_LOCATION: us-central1 # TODO: update region of the Artifact Registry
-  GKE_CLUSTER: zalenium    # TODO: update to cluster name
+  GKE_CLUSTER: gkedeployment-345319-gke    # TODO: update to cluster name
   GKE_ZONE: us-central1-c   # TODO: update to cluster zone
-  NAMESPACE_NAME: todo # TODO: update to namespace name
+  NAMESPACE_NAME: prod # TODO: update to namespace name
   DEPLOYMENT_NAME: todo # TODO: update to deployment name
   REPOSITORY: todo # TODO: update to Artifact Registry docker repository
-  IMAGE: app
+  IMAGE: prod
 
 jobs:
   setup-build-publish-deploy:
