--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -16,18 +16,20 @@ name: Build and Deploy to GKE
 on:
   push:
     branches:
-      - main
+      - test
 
 env:
-  PROJECT_ID: ${{ secrets.GKE_PROJECT }} # western-mix-343614
+  PROJECT_ID: ${{ secrets.GKE_PROJECT }} # todo-project-344814
   GAR_LOCATION: us-central1 # TODO: update region of the Artifact Registry
   GKE_CLUSTER: gkedeployment-345319-gke    # TODO: update to cluster name
-  GKE_ZONE: us-central1-c   # TODO: update to cluster zone
-  NAMESPACE_NAME: prod # TODO: update to namespace name
+  GKE_ZONE: us-central1   # TODO: update to cluster zone
+  NAMESPACE_NAME: test # TODO: update to namespace name
   DEPLOYMENT_NAME: todo # TODO: update to deployment name
   REPOSITORY: todo # TODO: update to Artifact Registry docker repository
-  IMAGE: prod
+  IMAGE: test
 
+  # projects/59295950721/locations/global/workloadIdentityPools/my-pool/providers/my-provider
+  # my-service-account@todo-project-344814.iam.gserviceaccount.com
 jobs:
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy
@@ -48,8 +50,8 @@ jobs:
     #   uses: 'google-github-actions/auth@v0'
     #   with:
     #     token_format: 'access_token'
-    #     workload_identity_provider: 'projects/166245383676/locations/global/workloadIdentityPools/actions-pool/providers/actions-provider'
-    #     service_account: 'actions-service-account@western-mix-343614.iam.gserviceaccount.com'
+    #     workload_identity_provider: 'projects/59295950721/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+    #     service_account: 'my-service-account@todo-project-344814.iam.gserviceaccount.com'
 
     # Alternative option - authentication via credentials json file
     - id: 'auth'
@@ -76,7 +78,7 @@ jobs:
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
           .
-    # Push the Docker image to Google Artifact Registry
+    # Push the Docker image to Google Artifact Registry test 
     - name: Publish
       run: |-
         docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA"
