--- a/deployment.yml
+++ b/deployment.yml
@@ -3,14 +3,14 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: todo
-  namespace: prod
+  namespace: test
   labels:
     app: todo
     tier: frontend
     version: v1
 data:
   client.url: localhost:80
-  mongo.db.url: mongodb://todo-mongo-service:27017/todo-app
+  mongo.db.url: mongodb://todomongodb-mongodb-replicaset:27017/todo-app
   port: "3000"
   
 ---
@@ -20,7 +20,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: todo
-  namespace: prod
+  namespace: test
   labels:
     app: todo
     tier: frontend
@@ -34,7 +34,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todo
-  namespace: prod
+  namespace: test
 spec:
   selector:
     matchLabels:
@@ -84,7 +84,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: todo
-  namespace: prod
+  namespace: test
   labels:
     app: todo
     tier: frontend
